// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders entire component when not loading 1`] = `
<div
  data-stylename="modal"
>
  <div
    data-stylename="content"
  >
    <div
      data-stylename="messages-header"
    >
      <div
        data-stylename="close-messages"
      >
        <CloseMessages />
      </div>
      <div
        data-stylename="messages-title"
      >
        <Icon
          name="Messages"
        />
        <h3>
          Messages
        </h3>
      </div>
    </div>
    <withRouter(ThreadList)
      data-stylename="left-column"
      onFocus={[Function]}
      threads={Array []}
    />
    <Route
      exact={true}
      path="/messages/:messageThreadId"
    >
      <Component />
    </Route>
  </div>
</div>
`;

exports[`renders loading when in loading state 1`] = `
<div
  data-stylename="modal"
>
  <div
    data-stylename="content"
  >
    <div
      data-stylename="messages-header"
    >
      <div
        data-stylename="close-messages"
      >
        <CloseMessages />
      </div>
      <div
        data-stylename="messages-title"
      >
        <Icon
          name="Messages"
        />
        <h3>
          Messages
        </h3>
      </div>
    </div>
    <div
      data-stylename="modal"
    >
      <Loading />
    </div>
  </div>
</div>
`;
